--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                         loading="lazy" width="24" height="24" alt="" class="icon-wrapper-5" /></div>
                                 <div class="feature-item">Design</div>
                             </div>
-                        </div><a href="#" target="_blank" class="button-7">
+                        </div><a href="project2" class="button-7">
                             <div class="text-25">READ MORE</div>
                         </a>
                     </div>
