--- a/project3.html
+++ b/project3.html
@@ -59,7 +59,7 @@
         <div class="title">Results</div>
         <div class="description-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt
             sagittis eros. Quisque quis euismod lorem. Etiam sodales ac felis id interdum.</div>
-        <div class="actions-4"><a href="#" target="_blank" class="button-8">
+        <div class="actions-4"><a href="project1" class="button-8">
                 <div class="text-22">Next project</div>
             </a></div>
         <div id="contact2" class="contact2">
